--- a/examples/examples.cabal
+++ b/examples/examples.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 6b8490732f6b8b92312b3d51b0bbd4ccda7081b339c78f7346f5d017c7470535
+-- hash: 5f1e1409eff5bce3c2736566d1ca246a89659e1368eeba0cdcb0c5c6a89b78dc
 
 name:           examples
 version:        0.4.0.1
@@ -31,6 +31,7 @@ library
       Example
       Proto.Protos.Grpcbin
       Proto.Protos.Grpcbin_Fields
+      Proto3Wire.Grpcbin
   other-modules:
       Paths_examples
   hs-source-dirs:
@@ -42,14 +43,18 @@ library
     , binary >=0.8.5 && <0.9
     , bytestring >=0.10.8 && <0.11
     , case-insensitive >=1.2.0 && <1.3
+    , containers
     , http-types >=0.12 && <0.13
     , http2 >=1.6 && <3
     , http2-client
     , http2-client-grpc
     , http2-grpc-proto-lens
+    , http2-grpc-proto3-wire
     , http2-grpc-types >=0.5 && <0.6
     , microlens
     , proto-lens
     , proto-lens-runtime
+    , proto3-wire
+    , text
     , unliftio-core >=0.1 && <0.3
   default-language: Haskell2010
